--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
       "**/*.js",
       "!**/node_modules/**",
       "!**/coverage/**",
+      "!public/**",
       "!jest.config.js"
     ],
     "coverageThreshold": {
